# rian_os

./: .claudeignore  .gitattributes  .gitignore  AI_CONTEXT.md  Cargo.toml  LICENSE  Makefile  README.md  build.rs  claude.md  main.rs
arch/: mod.rs
arch/aarch64/: context.rs
arch/board/: mod.rs  vga.rs
arch/cpu/: mod.rs  trap.rs
arch/interrupts/: mod.rs
arch/riscv64/: trap.rs
arch/x86_64/: gdt.rs  mod.rs  serial.rs
docs/: ARCHITECTURE.md  BOUNDARY_RULES.md  INSTALL.md  MIGRATION.md  ai_debug_prompt_master.md  cloude.md  debugging_guide_v4.md  debugging_report.md  development_summary_v4.md  error_analysis_prompt_tr.md  error_manifesto.md  error_report_2026-04-22.md  migration_guide.md  progress.md
drivers/: mod.rs
drivers/gpu/: gui.rs  mod.rs
drivers/input/: mod.rs
drivers/pci/: config.rs  driver.rs  mod.rs
drivers/terminal/: mod.rs
drivers/virtio/: input.rs  mod.rs
kernel/: mod.rs
kernel/ipc/: msg.rs
kernel/memory/: allocator.rs  memory_manager.rs  paging.rs
kernel/sched/: context.rs  percpu.rs  process_manager.rs  sync.rs  task_thread.rs
legacy/: main.R  main.rs
legacy/libkern/: safe_access.R  safe_access.rs
legacy/libsa/: initramfs.R  initramfs.rs
legacy/pexpert/: acpi.R  acpi.rs  dtb.R  dtb.rs  hardware_tests.R  hardware_tests.rs
legacy/security/: amfi.R  mac.R  security.R  security.rs
legacy/shell/: commands.R  commands.rs  shell.R  shell.rs
libkern/: mod.rs  safe_access.rs
services/: mod.rs
services/drivers/: mod.rs
services/net/: inet.rs  (+2 more)
src/: main.rs
tools/: fix_alloc.py  refactor_std.py
userland/: mod.rs
(+168 files in other folders)
