[package]
name = "rian_cekirdek"
version = "4.0.0-pre-alpha"
edition = "2021"
authors = ["simon_projec"]
description = "R-OS Next-Generation Modular Hybrid Microkernel Ecosystem"
license = "Apache-2.0"
repository = "https://github.com/simon-projec/rian-os"
homepage = "https://github.com/simon-projec/rian-os"

[[bin]]
name = "rian_cekirdek"
path = "main.rs"

[dependencies]
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
bootloader = "0.9.23"
x86_64 = "0.14.10"
spin = "0.9.8"
linked_list_allocator = "0.10.5"
volatile = "0.2.6"
aarch64-cpu = "9.4.0"
riscv = "0.10.1"
goblin = { version = "0.7.1", default-features = false, features = ["mach64"] }
tock-registers = "0.8.1"

[features]
default = ["multi_core", "acpi", "tty"]
multi_core = []
x86_kvm_pv = []
acpi = []
tty = []
